<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlertActivity"
    android:background="#FFDCD9">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="81dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="612dp"
        android:contentDescription="@string/todo"
        android:orientation="vertical"
        app:srcCompat="@drawable/helping"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/alertbtn"
        android:layout_width="wrap_content"
        android:layout_height="98dp"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="#FF8F6152"
        android:minHeight="48dp"
        android:text="@string/alert"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/status"
        android:layout_width="366dp"
        android:layout_height="116dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="471dp"
        android:text="@string/en_el_momento_que_te_sientas_en_peligro_presiona_el_bot_n_de_abajo_para_generar_una_alerta"
        android:textColor="#FF8F6152"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="341dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/todo"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.293"
        app:srcCompat="@drawable/login_bgbueno" />

</RelativeLayout>